Writing the content of the first full draft

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -18,3 +18,30 @@ pages = {S6},
 title = {CiTO, the {Citation} {Typing} {Ontology}},
 volume = {1 Suppl 1},
 }
+
+@misc{Aanmelder.
+  title = {{FAIRification of Toxicological Research Output:  Leveraging ELIXIR Resources}},
+  howpublished = "https://www.aanmelder.nl/intoxicom2024firstworkshop",
+  year = {2024}
+}
+
+@misc{INTOXICOM.
+  title = {{Integrating the Toxicology Community into ELIXIR}},
+  howpublished = "https://elixir-europe.org/internal-projects/commissioned-services/integrating-toxicology-community",
+  year = {2024}
+}
+
+@article{PARC,
+	author = {Marx-Stoelting, P. and Rivi{\` e}re, G. and Luijten, M. and Aiello-Holden, K. and Bandow, N. and Baken, K. and Ca{\~ n}as, A. and Castano, A. and Denys, S. and Fillol, C. and Herzler, M. and Iavicoli, I. and Karakitsios, S. and Klanova, J. and Kolossa-Gehring, M. and Koutsodimou, A. and Vicente, J. Lobo and Lynch, I. and Namorado, S. and Norager, S. and Pittman, A. and Rotter, S. and Sarigiannis, D. and Silva, M. J. and Theunis, J. and Tralau, T. and Uhl, M. and van Klaveren, J. and Wendt-Rasch, L. and Westerholm, E. and Rousselle, C. and Sanders, P.},
+	journaltitle = {Archives of Toxicology},
+	shortjournal = {Arch. Toxicol.},
+	doi = {10.1007/S00204-022-03435-7},
+	issn = {0340-5761},
+	number = {3},
+	date = {2023-01-16},
+	keywords = {European Partnership for the Assessment of Risks from Chemicals,chemical risk assessment,Europe},
+	language = {en},
+	pages = {893--908},
+	title = {A walk in the {PARC}: developing and implementing 21st century chemical risk assessment in {Europe}},
+	volume = {97},
+}
