--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -19,13 +19,13 @@ title = {CiTO, the {Citation} {Typing} {Ontology}},
 volume = {1 Suppl 1},
 }
 
-@misc{Aanmelder.
+@misc{Aanmelder,
   title = {{FAIRification of Toxicological Research Output:  Leveraging ELIXIR Resources}},
   howpublished = "https://www.aanmelder.nl/intoxicom2024firstworkshop",
   year = {2024}
 }
 
-@misc{INTOXICOM.
+@misc{INTOXICOM,
   title = {{Integrating the Toxicology Community into ELIXIR}},
   howpublished = "https://elixir-europe.org/internal-projects/commissioned-services/integrating-toxicology-community",
   year = {2024}
