--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,24 +1,3 @@
-@article{Queralt2016,
-  author={Queralt-Rosinach, N. and Pinero, J. and Bravo, {\`A}lex and Sanz, F. and Furlong, L. I.},
-  title={{DisGeNET-RDF: harnessing the innovative power of the Semantic Web to explore the genetic basis of diseases}},
-  journal={Bioinformatics},
-  year={2016},
-  volume={32},
-  number={14},
-  pages={2236--2238},
-  doi={10.1093/bioinformatics/btw214},
-}
-
-@article{CiTO,
-author = {Shotton, David},
-journal = {Journal of Biomedical Semantics},
-number = {Suppl 1},
-year = {2010},
-pages = {S6},
-title = {CiTO, the {Citation} {Typing} {Ontology}},
-volume = {1 Suppl 1},
-}
-
 @misc{Aanmelder,
   title = {{FAIRification of Toxicological Research Output:  Leveraging ELIXIR Resources}},
   howpublished = "https://www.aanmelder.nl/intoxicom2024firstworkshop",
@@ -45,3 +24,37 @@ volume = {1 Suppl 1},
 	title = {A walk in the {PARC}: developing and implementing 21st century chemical risk assessment in {Europe}},
 	volume = {97},
 }
+
+ @article{Houweling2023,
+  title={Research Output Management},
+  url={https://www.qeios.com/read/ZNWI7T},
+  DOI={10.32388/ZNWI7T},
+  journal={Qeios},
+  author={Houweling, Jente and Willighagen, Egon},
+  year={2023},
+  month=may
+}
+
+@article{Martens2023ELIXIR,
+	author = {Martens, Marvin and Stierum, Rob and Schymanski, Emma L. and Evelo, Chris T. and Aalizadeh, Reza and Aladjov, Hristo and Arturi, Kasia and Audouze, Karine and Babica, Pavel and Berka, Karel and Bessems, Jos and Blaha, Ludek and Bolton, Evan E. and Cases, Montserrat and Damalas, Dimitrios . and Dave, Kirtan and Dilger, Marco and Exner, Thomas and Geerke, Daan P. and Grafstr{\" o}m, Roland and Gray, Alasdair and Hancock, John M. and Hollert, Henner and Jeliazkova, Nina and Jennen, Danyel and Jourdan, Fabien and Kahlem, Pascal and Klanova, Jana and Kleinjans, Jos and Kondic, Todor and Kone, Bo{\" i} and Lynch, Iseult and Maran, Uko and Cuesta, Sergio Martinez and M{\' e}nager, Herv{\' e} and Neumann, Steffen and Nymark, Penny and Oberacher, Herbert and Ramirez, Noelia and Remy, Sylvie and Rocca-Serra, Philippe and Salek, Reza M. and Sallach, Brett and Sansone, Susanna-Assunta and Sanz, Ferran and Sarimveis, Haralambos and Sarntivijai, Sirarat and Schulze, Tobias and Slobodnik, Jaroslav and Spjuth, Ola and Tedds, Jonathan and Thomaidis, Nikolaos and Weber, Ralf J.M. and van Westen, Gerard J.P. and Wheelock, Craig E. and Williams, Antony J. and Witters, Hilda and Zdrazil, Barbara and {\v Z}upani{\v c}, An{\v z}e and Willighagen, Egon L.},
+	journaltitle = {F1000Research},
+	doi = {10.12688/F1000RESEARCH.74502.2},
+	issn = {2046-1402},
+	date = {2023-10-03},
+	language = {en},
+	pages = {1129},
+	title = {ELIXIR and {Toxicology}: a community in development},
+	volume = {10},
+}
+
+@article{Silva2022FAIR,
+	author = {da Silva Santos, Luiz Olavo Bonino and Wilkinson, Mark D. and da Silva Santos, Luiz Olavo Bonino and Burger, Kees and Kaliyaperumal, Rajaram and Wilkinson, Mark D.},
+	journaltitle = {Data Intelligence},
+	doi = {10.1162/DINT_A_00160},
+	issn = {2641-435X},
+	date = {2022-08-10},
+	keywords = {metadata},
+	pages = {1--21},
+	title = {FAIR {Data} {Point}: A {FAIR}-oriented approach for metadata publication},
+}
+
