Two missing references

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -67,3 +67,32 @@
   title = {{WorldFAIR WP04 NANOMATERIALS FIP01}},
   howpublished = "https://fip-wizard.ds-wizard.org/wizard/projects/b0d84171-4556-46ed-9ace-c1c58db38092"
 }
+
+@article{Lynch2020,
+	author = {Lynch, Iseult and Afantitis, Antreas and Exner, Thomas E and Himly, Martin and Lobaskin, Vladimir and Doganis, Philip and Maier, Dieter and Sanabria, Natasha and Papadiamantis, Anastasios G and Rybinska-Fryca, Anna and Gromelski, Maciej and Puzyn, Tomasz and Willighagen, Egon and Johnston, Blair D and Gulumian, Mary and Matzke, Marianne and Etxabe, Amaia Green and Bossa, Nathan and Serra, Angela and Liampa, Irene and Harper, Stacey L and T{\" a}mm, Kaido and Jensen, Alexander C\O{} and Kohonen, Pekka and Slater, Luke and Tsoumanis, Andreas and Greco, Dario and Winkler, David A and Sarimveis, Haralambos and Melagraki, Georgia},
+	journaltitle = {Nanomaterials (Basel, Switzerland)},
+	doi = {10.3390/NANO10122493},
+	issn = {2079-4991},
+	number = {12},
+	date = {2020-12-11},
+	keywords = {nanomaterial,nanoinformatics,International Chemical Identifier,JRCNM01001a,JRCNM01101a},
+	eprint = {33322568},
+	eprinttype = {pubmed},
+	title = {Can an {InChI} for {Nano} {Address} the {Need} for a {Simplified} {Representation} of {Complex} {Nanomaterials} across {Experimental} and {Nanoinformatics} {Studies}?},
+	volume = {10},
+}
+
+@article{VanRijn2022,
+	author = {van Rijn, Jeaphianne and Afantitis, Antreas and Culha, Mustafa and Dusinska, Maria and Exner, Thomas E. and Jeliazkova, Nina and Longhin, Eleonora Marta and Lynch, Iseult and Melagraki, Georgia and Nymark, Penny and Papadiamantis, Anastasios G. and Winkler, David A. and Yilmaz, Hulya and Willighagen, Egon},
+	journaltitle = {Journal of Cheminformatics},
+	shortjournal = {J Cheminform},
+	doi = {10.1186/S13321-022-00614-7},
+	issn = {1758-2946},
+	number = {1},
+	date = {2022-08-24},
+	keywords = {European Registry of Materials,nanomaterial,unique identifier},
+	language = {en},
+	title = {European {Registry} of {Materials}: global, unique identifiers for (undisclosed) nanomaterials},
+	volume = {14},
+}
+
