--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -96,3 +96,13 @@
 	volume = {14},
 }
 
+@article{Carusi2023,
+	author = {Carusi, Annamaria and Filipovska, Julija and Wittwehr, Clemens and Clerbaux, Laure-Alix},
+	journaltitle = {Frontiers in Public Health},
+	doi = {10.3389/FPUBH.2023.1212544},
+	issn = {2296-2565},
+	date = {2023-08-10},
+	title = {CIAO: a living experiment in interdisciplinary large-scale collaboration facilitated by the {Adverse} {Outcome} {Pathway} framework},
+	volume = {11},
+}
+
