Main project URL + reference

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -106,3 +106,12 @@
 	volume = {11},
 }
 
+ @article{VHP4Safety2024,
+   title={{The Virtual Human Platform for Safety Assessment (VHP4Safety) project: Next generation chemical safety assessment based on human data}},
+   ISSN={1868596X},
+   url={https://www.altex.org/index.php/altex/article/view/2833},
+   DOI={10.14573/altex.2407211},
+   journal={ALTEX},
+   author={Kienhuis, Anne and Krul, Cyrille and van Engelen, Jacqueline and Evelo, Chris and Hessel, Ellen and Hoekman, Jarno and Kramer, Nynke and Krop, Esmeralda and Masereeuw, Rosalinde and Moors, Ellen and Negro, Simona and Piersma, Albert and Pieters, Raymond and Teunis, Marc and Willighagen, Egon and Legler, Juliette},
+   year={2024}
+}
