--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -60,12 +60,12 @@
 
 @misc{WFFIP1,
   title = {{NanoPharos Database: Ready-for-Modelling Datasets for Nanoinformatics}},
-  howpublished = "https://fip-wizard.ds-wizard.org/wizard/projects/f1c10e5a-2094-4c00-9afe-7d7eca3bb6f8"
+  howpublished = "\url{https://fip-wizard.ds-wizard.org/wizard/projects/f1c10e5a-2094-4c00-9afe-7d7eca3bb6f8}"
 }
 
 @misc{WFFIP2,
   title = {{WorldFAIR WP04 NANOMATERIALS FIP01}},
-  howpublished = "https://fip-wizard.ds-wizard.org/wizard/projects/b0d84171-4556-46ed-9ace-c1c58db38092"
+  howpublished = "\url{https://fip-wizard.ds-wizard.org/wizard/projects/b0d84171-4556-46ed-9ace-c1c58db38092}"
 }
 
 @article{Lynch2020,
