Worked out more details of FAIR Cookbook recipe drafts

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -117,3 +117,19 @@
    author={Kienhuis, Anne and Krul, Cyrille and van Engelen, Jacqueline and Evelo, Chris and Hessel, Ellen and Hoekman, Jarno and Kramer, Nynke and Krop, Esmeralda and Masereeuw, Rosalinde and Moors, Ellen and Negro, Simona and Piersma, Albert and Pieters, Raymond and Teunis, Marc and Willighagen, Egon and Legler, Juliette},
    year={2024}
 }
+
+ @article{RoccaSerra2023,
+   title={The FAIR Cookbook - the essential resource for and by FAIR doers},
+   volume={10},
+   rights={All rights reserved},
+   ISSN={2052-4463},
+   DOI={10.1038/s41597-023-02166-3}, 
+   number={1},
+   journal={Scientific Data},
+   author={Rocca-Serra, Philippe and Gu, Wei and Ioannidis, Vassilios and Abbassi-Daloii, Tooba and Capella-Gutierrez, Salvador and Chandramouliswaran, Ishwar and Splendiani, Andrea and Burdett, Tony and Giessmann, Robert T. and Henderson, David and Batista, Dominique and Emam, Ibrahim and Gadiya, Yojana and Giovanni, Lucas and Willighagen, Egon and Evelo, Chris and Gray, Alasdair J. G. and Gribbon, Philip and Juty, Nick and Welter, Danielle and Quast, Karsten and Peeters, Paul and Plasterer, Tom and Wood, Colin and Van Der Horst, Eelke and Reilly, Dorothy and Van Vlijmen, Herman and Scollen, Serena and Lister, Allyson and Thurston, Milo and Granell, Ramon and the FAIR Cookbook Contributors and Backianathan, Gabriel and Baier, Sebastian and Thomsen, Anne Cambon and Cook, Martin and Courtot, Melanie and d’Arcy, Mike and Dauth, Kurt and Del Piico, Eva Marin and Garcia, Leyla and Goldmann, Ulrich and Grouès, Valentin and Clarke, Daniel J. B. and Lefloch, Erwan and Liyanage, Isuru and Papadopoulos, Petros and Pommier, Cyril and Reynares, Emiliano and Ronzano, Francesco and Delfin-Rossaro, Alejandra and Sagatopam, Venkata and Sedani, Ashni and Sedlyarov, Vitaly and Shilova, Liubov and Singh, Sukhi and Strubel, Jolanda and Van Bochove, Kees and Warnes, Zachary and Woollard, Peter and Xu, Fuqi and Zaliani, Andrea and Sansone, Susanna-Assunta},
+   year={2023},
+   month=may,
+   pages={292},
+   language={en}
+ }
+
