Added the first presentation

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -133,3 +133,15 @@
    language={en}
  }
 
+@article{Willighagen_2024,
+  title={Introduction to hands-on session data {FAIRification}},
+  rights={Creative Commons Attribution 4.0 International},
+  url={https://zenodo.org/doi/10.5281/zenodo.13947000},
+  DOI={10.5281/ZENODO.13947000},
+  abstractNote={Presentation at the first ELIXIR Toxicology Community INTOXICOM workshop.},
+  publisher={Zenodo},
+  author={Willighagen, Egon},
+  year={2024},
+  month=may,
+  language={en}
+}
