Added Penny's presentation too

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -145,3 +145,16 @@
   month=may,
   language={en}
 }
+
+@article{Nymark_2024,
+  title={{ELIXIR INTOXICOM WP1 workshop - FAIR AOPs Introduction}},
+  rights={Creative Commons Attribution 4.0 International},
+  url={https://zenodo.org/doi/10.5281/zenodo.13939263},
+  DOI={10.5281/ZENODO.13939263},
+  abstractNote={This short introduction to FAIR AOPs was given prior to an extensive overview of the field by Clemens Wittwehr at the ELIXIR INTOXICOM WP1 workshop in Leiden, 29th May, 2024. Both presentations are based on the publication “Why adverse outcome pathways need to be FAIR” (https://doi.org/10.14573/altex.2307131).},
+  publisher={Zenodo},
+  author={Nymark, Penny},
+  year={2024},
+  month=oct,
+  language={en}
+}
