Added ROBOT paper

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -158,3 +158,17 @@
   month=oct,
   language={en}
 }
+
+@article{Jackson_2019,
+  title = {ROBOT: A Tool for Automating Ontology Workflows},
+  volume = {20},
+  ISSN = {1471-2105},
+  url = {http://dx.doi.org/10.1186/s12859-019-3002-3},
+  DOI = {10.1186/s12859-019-3002-3},
+  number = {1},
+  journal = {BMC Bioinformatics},
+  publisher = {Springer Science and Business Media LLC},
+  author = {Jackson,  Rebecca C. and Balhoff,  James P. and Douglass,  Eric and Harris,  Nomi L. and Mungall,  Christopher J. and Overton,  James A.},
+  year = {2019},
+  month = jul 
+}
