Added Clemens' contribution

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -172,3 +172,25 @@
   year = {2019},
   month = jul 
 }
+
+@article{Wittwehr2024,
+author = "Clemens Wittwehr",
+title = "{Why Adverse Outcome Pathways need to be FAIR}",
+year = "2024",
+month = "10",
+url = "https://figshare.com/articles/presentation/Why_Adverse_Outcome_Pathways_need_to_be_FAIR/27274962",
+doi = "10.6084/m9.figshare.27274962.v1"
+}
+
+ @book{OECD2018,
+   type={OECD Series on Adverse Outcome Pathways},
+   series={OECD Series on Adverse Outcome Pathways},
+   volume={1},
+   url={https://www.oecd-ilibrary.org/environment/users-handbook-supplement-to-the-guidance-document-for-developing-and-assessing-adverse-outcome-pathways_5jlv1m9d1g32-en},
+   DOI={10.1787/5jlv1m9d1g32-en},
+   number={1},
+   year={2018},
+   month=feb,
+   collection={OECD Series on Adverse Outcome Pathways},
+   language={en}
+}
