--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -182,15 +182,15 @@ url = "https://figshare.com/articles/presentation/Why_Adverse_Outcome_Pathways_n
 doi = "10.6084/m9.figshare.27274962.v1"
 }
 
- @book{OECD2018,
-   type={OECD Series on Adverse Outcome Pathways},
-   series={OECD Series on Adverse Outcome Pathways},
-   volume={1},
-   url={https://www.oecd-ilibrary.org/environment/users-handbook-supplement-to-the-guidance-document-for-developing-and-assessing-adverse-outcome-pathways_5jlv1m9d1g32-en},
-   DOI={10.1787/5jlv1m9d1g32-en},
-   number={1},
-   year={2018},
-   month=feb,
-   collection={OECD Series on Adverse Outcome Pathways},
-   language={en}
+@incollection{OECD2018,
+  booktitle={{Users' Handbook supplement to the Guidance Document for developing and assessing Adverse Outcome Pathways}},
+  series={OECD Series on Adverse Outcome Pathways},
+  volume={1},
+  url={https://www.oecd-ilibrary.org/environment/users-handbook-supplement-to-the-guidance-document-for-developing-and-assessing-adverse-outcome-pathways_5jlv1m9d1g32-en},
+  DOI={10.1787/5jlv1m9d1g32-en},
+  number={1},
+  year={2018},
+  month=feb,
+  title={OECD Series on Adverse Outcome Pathways},
+  language={en}
 }
