Added references from Iseult

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -194,3 +194,32 @@ doi = "10.6084/m9.figshare.27274962.v1"
   title={OECD Series on Adverse Outcome Pathways},
   language={en}
 }
+
+@misc{RAa-SA1rYr,
+  author={Lynch, Iseult},
+  title={FIP.27.W.1 | ELIXIR Toxicology Community FIP workshop},
+  url={https://w3id.org/np/RAa-SA1rYrg7Tyimk8iO22uJ08YmD4HC3z91kRN6hbwlw}
+}
+
+@article{Lynch2024,
+  title={Elixir INTOXICOM Workshop 1: The PARC approach for FAIR toxicological data - May 2024},
+  rights={Creative Commons Attribution 4.0 International},
+  url={https://zenodo.org/doi/10.5281/zenodo.13984059},
+  DOI={10.5281/ZENODO.13984059},
+  publisher={Zenodo},
+  author={Lynch, Iseult},
+  year={2024},
+  month=oct,
+  language={en}
+}
+
+@article{Lynch2024b,
+  title={Welcome to FIP.27.W.1},
+  url={https://osf.io/m27zs},
+  publisher={OSF},
+  author={Lynch, Iseult and Nymark, Penny and Burger, Gerhard and Magagna, Barbara},
+  year={2024},
+  month=May,
+  language={en}
+}
+
