--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -197,12 +197,12 @@ doi = "10.6084/m9.figshare.27274962.v1"
 
 @misc{RAa-SA1rYr,
   author={Lynch, Iseult},
-  title={FIP.27.W.1 | ELIXIR Toxicology Community FIP workshop},
+  title={{FIP.27.W.1 | ELIXIR Toxicology Community FIP workshop}},
   url={https://w3id.org/np/RAa-SA1rYrg7Tyimk8iO22uJ08YmD4HC3z91kRN6hbwlw}
 }
 
 @article{Lynch2024,
-  title={Elixir INTOXICOM Workshop 1: The PARC approach for FAIR toxicological data - May 2024},
+  title={{Elixir INTOXICOM Workshop 1: The PARC approach for FAIR toxicological data - May 2024}},
   rights={Creative Commons Attribution 4.0 International},
   url={https://zenodo.org/doi/10.5281/zenodo.13984059},
   DOI={10.5281/ZENODO.13984059},
@@ -214,7 +214,7 @@ doi = "10.6084/m9.figshare.27274962.v1"
 }
 
 @article{Lynch2024b,
-  title={Welcome to FIP.27.W.1},
+  title={Welcome to {FIP.27.W.1}},
   url={https://osf.io/m27zs},
   publisher={OSF},
   author={Lynch, Iseult and Nymark, Penny and Burger, Gerhard and Magagna, Barbara},
@@ -223,3 +223,14 @@ doi = "10.6084/m9.figshare.27274962.v1"
   language={en}
 }
 
+@article{Magagna2022,
+  title={{FIPs and Practice}},
+  volume={8},
+  ISSN={2367-7163},
+  DOI={10.3897/rio.8.e94451},
+  journal={Research Ideas and Outcomes},
+  author={Magagna, Barbara and Schultes, Erik and Suchánek, Marek and Kuhn, Tobias},
+  year={2022},
+  month=oct,
+  pages={e94451}
+}
