Filled the last gaps with content

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -234,3 +234,94 @@ doi = "10.6084/m9.figshare.27274962.v1"
   month=oct,
   pages={e94451}
 }
+
+@TechReport{Sahoo2013,
+  author      = "Satya Sahoo and Timothy Lebo and Deborah McGuinness",
+  title       = "{PROV}-O: The {PROV} Ontology",
+  month       = apr,
+  note        = "https://www.w3.org/TR/2013/REC-prov-o-20130430/",
+  year        = "2013",
+  bibsource   = "https://w2.syronex.com/jmr/w3c-biblio",
+  type        = "{W3C} Recommendation",
+  institution = "W3C",
+}
+
+@article{Diehl2016,
+  title={{The Cell Ontology 2016: enhanced content, modularization, and ontology interoperability}},
+  volume={7},
+  ISSN={2041-1480},
+  url={http://dx.doi.org/10.1186/s13326-016-0088-7},
+  DOI={10.1186/s13326-016-0088-7},
+  number={1},
+  journal={Journal of Biomedical Semantics},
+  author={Diehl, Alexander D. and Meehan, Terrence F. and Bradford, Yvonne M. and Brush, Matthew H. and Dahdul, Wasila M. and Dougall, David S. and He, Yongqun and Osumi-Sutherland, David and Ruttenberg, Alan and Sarntivijai, Sirarat and Van Slyke, Ceri E. and Vasilevsky, Nicole A. and Haendel, Melissa A. and Blake, Judith A. and Mungall, Christopher J.},
+  year={2016},
+  month=jul
+}
+
+@article{Sarkans2018,
+  title={{The BioStudies database—one stop shop for all data supporting a life sciences study}},
+  volume={46},
+  DOI={10.1093/nar/gkx965},
+  number={Database issue},
+  journal={Nucleic Acids Research},
+  author={Sarkans, Ugis and Gostev, Mikhail and Athar, Awais and Behrangi, Ehsan and Melnichuk, Olga and Ali, Ahmed and Minguet, Jasmine and Rada, Juan Camillo and Snow, Catherine and Tikhonov, Andrew and Brazma, Alvis and McEntyre, Johanna},
+  year={2018},
+  month=jan,
+  pages={D1266},
+  language={en}
+}
+
+@article{Burgin2023,
+  title={{The European Nucleotide Archive in 2022}},
+  volume={51},
+  rights={https://creativecommons.org/licenses/by/4.0/},
+  ISSN={0305-1048, 1362-4962},
+  DOI={10.1093/nar/gkac1051}, 
+  number={D1},
+  journal={Nucleic Acids Research},
+  author={Burgin, Josephine and Ahamed, Alisha and Cummins, Carla and Devraj, Rajkumar and Gueye, Khadim and Gupta, Dipayan and Gupta, Vikas and Haseeb, Muhammad and Ihsan, Maira and Ivanov, Eugene and Jayathilaka, Suran and Balavenkataraman Kadhirvelu, Vishnukumar and Kumar, Manish and Lathi, Ankur and Leinonen, Rasko and Mansurova, Milena and McKinnon, Jasmine and O’Cathail, Colman and Paupério, Joana and Pesant, Stéphane and Rahman, Nadim and Rinck, Gabriele and Selvakumar, Sandeep and Suman, Swati and Vijayaraja, Senthilnathan and Waheed, Zahra and Woollard, Peter and Yuan, David and Zyoud, Ahmad and Burdett, Tony and Cochrane, Guy},
+  year={2023},
+  month=jan,
+  pages={D121–D125},
+  language={en}
+}
+
+@article{RoccaSerra2009,
+  title={{Specification Documentation: Isa-Tab 1.0}},
+  rights={Creative Commons Attribution 4.0, Open Access},
+  url={https://zenodo.org/record/161355},
+  DOI={10.5281/ZENODO.161355}, 
+  publisher={Zenodo},
+  author={Rocca-Serra, Philippe and Sansone, Susanna-Assunta and Brandizi, Marco},
+  year={2009},
+  month=jan
+}
+
+@article{deMatos2010,
+  title={Chemical Entities of Biological Interest: an update.},
+  volume={38},
+  ISSN={1362-4962},
+  DOI={10.1093/nar/gkp886},
+  number={Database issue},
+  journal={Nucleic acids research},
+  author={de Matos, Paula and Alcántara, Rafael and Dekker, Adriano and Ennis, Marcus and Hastings, Janna and Haug, Kenneth and Spiteri, Inmaculada and Turner, Steve and Steinbeck, Christoph},
+  year={2010},
+  month=jan,
+  pages={D249–D254}
+}
+
+@article{Malone2010,
+  title={Modeling sample variables with an Experimental Factor Ontology},
+  volume={26},
+  ISSN={1460-2059},
+  DOI={10.1093/bioinformatics/btq099}, 
+  number={8},
+  journal={Bioinformatics},
+  author={Malone, James and Holloway, Ele and Adamusiak, Tomasz and Kapushesky, Misha and Zheng, Jie and Kolesnikov, Nikolay and Zhukova, Anna and Brazma, Alvis and Parkinson, Helen},
+  year={2010},
+  month=apr,
+  pages={1112–1118}
+}
+
+
