added citations to presentations

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -324,4 +324,36 @@ doi = "10.6084/m9.figshare.27274962.v1"
   pages={1112–1118}
 }
 
+@misc{martens_2024_14005493,
+  author       = {Martens, Marvin},
+  title        = {{ELIXIR INTOXICOM WP1 workshop - FAIRsharing 
+                   Toxicology Collection}},
+  month        = oct,
+  year         = 2024,
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.14005493},
+  url          = {https://doi.org/10.5281/zenodo.14005493}
+}
 
+
+@misc{martens_2024_14005454,
+  author       = {Martens, Marvin},
+  title        = {{ELIXIR INTOXICOM WP1 workshop - FAIR AOPs - 
+                   identified challenges}},
+  month        = oct,
+  year         = 2024,
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.14005454},
+  url          = {https://doi.org/10.5281/zenodo.14005454}
+}
+
+@misc{martens_2024_14005367,
+  author       = {Martens, Marvin},
+  title        = {{ELIXIR INTOXICOM WP1 workshop - ELIXIR Toxicology 
+                   Community introduction}},
+  month        = oct,
+  year         = 2024,
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.14005367},
+  url          = {https://doi.org/10.5281/zenodo.14005367}
+}
