added citation on Key event components and added to paragraph

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -357,3 +357,32 @@ doi = "10.6084/m9.figshare.27274962.v1"
   doi          = {10.5281/zenodo.14005367},
   url          = {https://doi.org/10.5281/zenodo.14005367}
 }
+
+@article{Ives2017,
+author = {Ives, Cataia and Campia, Ivana and Wang, Rong-Lin and Wittwehr, Clemens and Edwards, Stephen},
+title = {Creating a Structured Adverse Outcome Pathway Knowledgebase via Ontology-Based Annotations},
+journal = {Applied In Vitro Toxicology},
+volume = {3},
+number = {4},
+pages = {298-311},
+year = {2017},
+doi = {10.1089/aivt.2017.0017},
+
+URL = { 
+    
+        https://doi.org/10.1089/aivt.2017.0017
+    
+    
+
+},
+eprint = { 
+    
+        https://doi.org/10.1089/aivt.2017.0017
+    
+    
+
+}
+,
+    abstract = { Abstract The Adverse Outcome Pathway (AOP) framework is increasingly used to integrate data based on traditional and emerging toxicity testing paradigms. As the number of AOP descriptions has increased, so has the need to define the AOP in computable terms. Herein, we present a comprehensive annotation of 172 AOPs housed in the AOP-Wiki as of December 4, 2016, using terms from existing biological ontologies. AOP Key Events (KEs) were assigned ontology terms using a concept called the Event Component, which consists of a Process, an Object, and an Action term, with each term originating from ontologies and other controlled vocabularies. Annotation of KEs with ontology classes from 14 ontologies and controlled vocabularies resulted in a total of 685 KEs being annotated with a total of 809 Event Components. A set of seven conventions resulted, defining the annotation of KEs via Event Components. This expanded annotation of AOPs allows computational reasoners to aid in both AOP development and applications. In addition, the incorporation of explicit biological objects will reduce the time required for converting a qualitative AOP description into a conceptual model that can support computational modeling. As high-throughput genomics becomes a more important part of the high-throughput toxicity testing landscape, the new approaches described here for annotating KEs will also promote the visualization and analysis of genomics data in an AOP context. }
+}
+
