Add more text on FIPs

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -222,6 +222,15 @@ doi = "10.6084/m9.figshare.27274962.v1"
   month=May,
   language={en}
 }
+@article{Lynch2024c,
+  title={{Elixir Toxicology Community FIPs}},
+  url={https://osf.io/edq3c/},
+  publisher={OSF},
+  author={Lynch, Iseult and Nymark, Penny and Burger, Gerhard and Magagna, Barbara},
+  year={2024},
+  month=May,
+  language={en}
+}
 
 @article{Magagna2022,
   title={{FIPs and Practice}},
@@ -384,5 +393,36 @@ eprint = {
 }
 ,
     abstract = { Abstract The Adverse Outcome Pathway (AOP) framework is increasingly used to integrate data based on traditional and emerging toxicity testing paradigms. As the number of AOP descriptions has increased, so has the need to define the AOP in computable terms. Herein, we present a comprehensive annotation of 172 AOPs housed in the AOP-Wiki as of December 4, 2016, using terms from existing biological ontologies. AOP Key Events (KEs) were assigned ontology terms using a concept called the Event Component, which consists of a Process, an Object, and an Action term, with each term originating from ontologies and other controlled vocabularies. Annotation of KEs with ontology classes from 14 ontologies and controlled vocabularies resulted in a total of 685 KEs being annotated with a total of 809 Event Components. A set of seven conventions resulted, defining the annotation of KEs via Event Components. This expanded annotation of AOPs allows computational reasoners to aid in both AOP development and applications. In addition, the incorporation of explicit biological objects will reduce the time required for converting a qualitative AOP description into a conceptual model that can support computational modeling. As high-throughput genomics becomes a more important part of the high-throughput toxicity testing landscape, the new approaches described here for annotating KEs will also promote the visualization and analysis of genomics data in an AOP context. }
+}
+@misc{fip_mini,
+  doi = {10.5281/ZENODO.10417536},
+  url = {https://zenodo.org/doi/10.5281/zenodo.10417536},
+  author = {Schultes,  Erik and Magagna,  Barbara and Schultes,  Jacintha},
+  keywords = {FAIR,  FAIR Implementation Profile,  FAIR Enabling Resource},
+  language = {en},
+  title = {FIP mini-questionnaire},
+  publisher = {Zenodo},
+  year = {2023},
+  copyright = {Creative Commons Attribution Share Alike 4.0 International}
+}
+@inbook{Schultes2020,
+  title = {Reusable FAIR Implementation Profiles as Accelerators of FAIR Convergence},
+  ISBN = {9783030658472},
+  ISSN = {1611-3349},
+  url = {http://dx.doi.org/10.1007/978-3-030-65847-2_13},
+  DOI = {10.1007/978-3-030-65847-2_13},
+  booktitle = {Advances in Conceptual Modeling},
+  publisher = {Springer International Publishing},
+  author = {Schultes,  Erik and Magagna,  Barbara and Hettne,  Kristina Maria and Pergl,  Robert and Suchánek,  Marek and Kuhn,  Tobias},
+  year = {2020},
+  pages = {138–147}
+}
+@misc{fer_def,
+	author = {Magagna, Barbara, and Erik A Schultes},
+	date-added = {2024-10-29 15:49:46 +0100},
+	date-modified = {2024-10-29 15:51:17 +0100},
+	url = {https://osf.io/2f9ej},
+	title = {3PFF References: FER type definitions},
+	year = {2024}
 }
 
